--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mon-projet-vanilla",
+  "name": "threejs-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,13 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.10"
+    "vite": "^6.1.0"
   },
   "dependencies": {
-    "@theatre/core": "^0.7.2",
-    "@theatre/r3f": "^0.7.2",
-    "@theatre/studio": "^0.7.2",
-    "stats.js": "^0.17.0",
-    "three": "^0.170.0"
+    "three": "^0.173.0",
+    "vite-plugin-glsl": "^1.3.1"
   }
 }
