--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.1.0"
   },
   "dependencies": {
+    "gsap": "^3.12.7",
     "three": "^0.173.0",
     "vite-plugin-glsl": "^1.3.1"
   }
